opam-version: "2.0"
name: "bpf_match_string"
version: "0.1"
synopsis: "Simple eBPF DSL and assembler"
license: "LGPL-3 with OCaml linking exception"
maintainer: "Raman Varabets <roman.vorobets@gmail.com>"
authors: [
  "Joris Giovannangeli <joris.giovannangeli@ahrefs.com>"
  "Raman Varabets <roman.vorobets@gmail.com>"
]
homepage: "https://github.com/ahrefs/ocaml-bpf-match-string"
bug-reports: "https://github.com/ahrefs/ocaml-bpf-match-string/issues"
dev-repo: "git+https://github.com/ahrefs/ocaml-bpf-match-string.git"
depends: [
  "ocaml" {>= "4.02"}
  "ocamlfind" {build}
  "dune" {build}
  "bpf"
  "ubpf" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest"]
]
